# BrainConnectivityDetection

./: .gitignore  CMakeLists.txt  README  SubWidgetParadigmInBold.cpp  SubWidgetParadigmInBold.h  SubWidgetParadigmInBold.ui  fmriDesign.configure  main.cpp
MainWindow/: CMakeLists.txt  DicomParse.cpp  DicomParse.h  ImageConvert.cpp  ImageConvert.h  ImageViewer2View.cpp  ImageViewer2View.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  MarchingCube_construct.cpp  MarchingCube_construct.h  RegistrationProcess.cpp  RegistrationProcess.h  ResliceView.cpp  ResliceView.h
PearsonCorrelation/: CMakeLists.txt  GenerateTimeCourse.cpp  GenerateTimeCourse.h  GraphAnalysis.cpp  GraphAnalysis.h  PearsonCorrelationMethod.cpp  PearsonCorrelationMethod.h  PearsonCorrelation_algorithm.hpp  ROIBasedPanel.cpp  ROIBasedPanel.h  ROIBasedPanel.ui
SubWidgetBold/: CMakeLists.txt  MyProgressDialog.cpp  MyProgressDialog.h  SubWidgetParadigmInBold - 3.31.h  SubWidgetParadigmInBold - 3.32.cpp  SubWidgetParadigmInBold.cpp  SubWidgetParadigmInBold.h
advance_dialog/: CMakeLists.txt  Dialog_Paradigm_Advance.cpp  Dialog_Paradigm_Advance.h  Dialog_Paradigm_Advance.ui
brain_strip_atlas/: CMakeLists.txt  itkStripTsImageFilter.h  itkStripTsImageFilter.hxx
fmri/: CMakeLists.txt  FMRIEngineConstants.h  GeneralLinearModel.cxx  GeneralLinearModel.h  PearsonCorrelationBase.h  SignalModel.cxx  SignalModel.h  fMRIEngine_include.h  main.cxx  readme.txt  vtkActivationDetector.cxx  vtkActivationDetector.h  vtkActivationEstimator.cxx  vtkActivationEstimator.h  vtkActivationFalseDiscoveryRate.cxx  vtkActivationFalseDiscoveryRate.h  vtkActivationRegionStats.cxx  vtkActivationRegionStats.h  vtkActivationVolumeCaster.cxx  vtkActivationVolumeCaster.h  vtkActivationVolumeGenerator.cxx  vtkActivationVolumeGenerator.h  vtkCDF.cxx  vtkCDF.h  vtkFMRIEngineConfigure.h  vtkFMRIEngineConfigure.h.cin  vtkGLMDetector.cxx  vtkGLMDetector.h  vtkGLMEstimator.cxx  vtkGLMEstimator.h  vtkGLMVolumeGenerator.cxx  vtkGLMVolumeGenerator.h  vtkGetTimecourse.cpp  vtkGetTimecourse.h  vtkIsingActivationThreshold.cxx  vtkIsingActivationThreshold.h  vtkIsingActivationTissue.cxx  vtkIsingActivationTissue.h  vtkIsingConditionalDistribution.cxx  vtkIsingConditionalDistribution.h  (+9 more)
libICA/: CMakeLists.txt  README  libICA.c  libICA.h  matrix.h  svdcmp.c  svdcmp.h
qcustomplot/: CMakeLists.txt  qcustomplot.cpp  qcustomplot.h
registration/: Register.h  Register.hpp
